# Roy

./: .gitignore  .lgtm.yml  .travis.yml  CMakeLists.txt  Makefile  README.md  appveyor.yml  arity.c  arity.h  banner.sh  builtin.c  builtin.h  codecov.yml  compare.c  compare.h  compile.c  compile.h  decl.h  defines.h  defs.h  defs.sh  depends.h  deps.h  deps.sh  ersatz.c  eval.c  exeterm.c  exist.joy  factor.c  factor.h  fib.c  fib.joy  fib1a.joy  gc.c  gc.h  identify.c  identify.h  japi.joy  japilib.c  joy.h  (+46 more)
.github/workflows/: c-cpp.yml
doc/: COYimplJOY.md  CoyimplJoy.md  ROYimplJOY.md  VoyimplJoy.md
gui/: jadd.c  jadditem.c  jalertbox.c  jappendtext.c  jbeep.c  jborderpanel.c  jbutton.c  jcanvas.c  jcheckbox.c  jcheckmenuitem.c  jchoice.c  jchoicebox2.c  jchoicebox3.c  jcliprect.c  jcomponentlistener.c  jconnect.c  jdelete.c  jdeselect.c  jdialog.c  jdisable.c  jdispose.c  jdrawarc.c  jdrawcircle.c  jdrawimage.c  jdrawimagesource.c  jdrawline.c  jdrawoval.c  jdrawpixel.c  jdrawpolygon.c  jdrawpolyline.c  jdrawrect.c  jdrawroundrect.c  jdrawscaledimage.c  jdrawstring.c  jenable.c  jfiledialog.c  jfileselect.c  jfillarc.c  jfillcircle.c  jfilloval.c  (+159 more)
lib/: CMakeLists.txt  fib.joy  fib0.c  flatjoy.joy  gcd.joy  grmtst.joy  joytut.joy  joytut.ok  jp-church.joy  jp-joytst.joy  jp-nestrec.joy  jp-reprodtst.joy  laztst.joy  lsptst.inp  lsptst.joy  lsptst.lsp  modtst.joy  mtrtst.joy  plgtst.joy  regres.mak  regres1.mak  regres2.mak  reptst.joy  symtst.joy  test.joy  test1.joy  tutorial.joy
src/: __dump.c  __html_manual.c  __latex_manual.c  __manual_list.c  __memoryindex.c  __memorymax.c  __settracegc.c  __symtabindex.c  __symtabmax.c  _ast_.c  _equals_.c  _gt_.c  _gt__equals_.c  _help.c  _lt_.c  _lt__equals_.c  _minus_.c  _plus_.c  _sol_.c  abort.c  abs.c  acos.c  add.c  all.c  all_set.c  all_str.c  and.c  app1.c  app11.c  app12.c  app2.c  app3.c  app4.c  argc.c  argv.c  asin.c  at.c  at_set.c  at_str.c  atan.c  (+281 more)
test/: CMakeLists.txt  m19.joy  m20.joy  test01.joy  test01.txt  test02.joy  test02.txt  test03.joy  test03.txt  test04.joy  test04.txt  test05.joy  test06.joy  test06.txt  test07.joy  test07.txt  test08.joy  test09.joy  test09.txt  test10.joy  test10.txt  test11.joy  test12.joy  test12.txt  test13.joy  test13.txt  test14.joy  test15.joy  test18.joy  test20.joy  test22.joy  test25.joy  test29.joy
test2/: CMakeLists.txt  __dump.joy  __html_manual.joy  __latex_manual.joy  __manual_list.joy  __memoryindex.joy  __memorymax.joy  __settracegc.joy  __symtabindex.joy  __symtabmax.joy  _help.joy  abort.joy  abs.joy  acos.joy  add.joy  all.joy  all2.joy  and.joy  app1.joy  app11.joy  app12.joy  app2.joy  app3.joy  app4.joy  argc.joy  argv.joy  asin.joy  at.joy  atan.joy  atan2.joy  autoput.joy  binary.joy  binary2.joy  binrec.joy  binrec2.joy  body.joy  branch.joy  branch2.joy  case.joy  case2.joy  (+223 more)
