#
#   module  : CMakeLists.txt
#   version : 1.1
#   date    : 09/19/23
#
macro(exe8 src)
add_custom_command(OUTPUT  ${src}.c
		   DEPENDS ${src}.joy
		   COMMAND ${CMAKE_SOURCE_DIR}/joy -c
			   ${CMAKE_SOURCE_DIR}/test2/${src}.joy >${src}.c)
add_executable(${src} ${src}.c
	       ${CMAKE_SOURCE_DIR}/exeterm.c
               ${CMAKE_SOURCE_DIR}/ersatz.c
	       ${CMAKE_SOURCE_DIR}/main.c
               ${CMAKE_SOURCE_DIR}/exec.c
               ${CMAKE_SOURCE_DIR}/writ.c)
include_directories(${CMAKE_SOURCE_DIR})
target_link_libraries(${src} m gc)
endmacro(exe8)

exe8(__memoryindex)
exe8(__memorymax)
exe8(abort)
exe8(abs)
exe8(acos)
exe8(all2)
exe8(and)
exe8(app1)
exe8(app11)
exe8(app12)
exe8(app2)
exe8(app3)
exe8(app4)
exe8(argc)
exe8(argv)
exe8(asin)
exe8(at)
exe8(atan)
exe8(atan2)
exe8(autoput)
exe8(binary)
exe8(binrec)
exe8(branch)
exe8(case)
exe8(casting)
exe8(ceil)
exe8(char)
exe8(choice)
exe8(chr)
exe8(cleave)
exe8(clock)
exe8(compare)
exe8(concat)
exe8(cond)
exe8(condlinrec)
exe8(condnestrec)
exe8(cons)
exe8(construct)
exe8(cos)
exe8(cosh)
exe8(dip)
exe8(div)
exe8(divide)
exe8(drop)
exe8(dup)
exe8(dupd)
exe8(enconcat)
exe8(eql)
exe8(equal)
exe8(exp)
exe8(false)
exe8(fclose)
exe8(feof)
exe8(ferror)
exe8(fflush)
exe8(fgetch)
exe8(fgets)
exe8(file)
exe8(filetime)
exe8(filter)
exe8(first)
exe8(float)
exe8(floor)
exe8(fold)
exe8(fopen)
exe8(format)
exe8(formatf)
exe8(fput)
exe8(fputch)
exe8(fputchars)
exe8(fputstring)
exe8(fread)
exe8(fremove)
exe8(frename)
exe8(frexp)
exe8(fseek)
exe8(ftell)
exe8(fwrite)
exe8(gc2)
exe8(genrec)
exe8(geql)
exe8(getch)
exe8(getenv)
exe8(gmtime)
exe8(greater)
exe8(has)
exe8(i)
exe8(id)
exe8(ifchar)
exe8(iffile)
exe8(iffloat)
exe8(ifinteger)
exe8(iflist)
exe8(iflogical)
exe8(ifset)
exe8(ifstring)
exe8(ifte)
exe8(in)
exe8(infra)
exe8(integer)
exe8(ldexp)
exe8(leaf)
exe8(leql)
exe8(less)
exe8(linrec)
exe8(list)
exe8(localtime)
exe8(log)
exe8(log10)
exe8(logical)
exe8(map)
exe8(max)
exe8(maxint)
exe8(min)
exe8(minus)
exe8(mktime)
exe8(modf)
exe8(mul)
exe8(neg)
exe8(neql)
exe8(not)
exe8(null)
exe8(nullary)
exe8(of)
exe8(opcase)
exe8(or)
exe8(ord)
exe8(over)
exe8(pick)
exe8(plus)
exe8(pop)
exe8(popd)
exe8(pow)
exe8(pred)
exe8(primrec)
exe8(put)
exe8(putch)
exe8(putchars)
exe8(quit)
exe8(rand)
exe8(rem)
exe8(rest)
exe8(rolldown)
exe8(rolldownd)
exe8(rollup)
exe8(rollupd)
exe8(rotate)
exe8(rotated)
exe8(round)
exe8(sametype)
exe8(set)
exe8(setautoput)
exe8(setsize)
exe8(sign)
exe8(sin)
exe8(sinh)
exe8(size)
exe8(small)
exe8(some)
exe8(split)
exe8(sqrt)
exe8(srand)
exe8(stack)
exe8(stderr)
exe8(stdin)
exe8(stdout)
exe8(step)
exe8(strftime)
exe8(string)
exe8(strtod)
exe8(strtol)
exe8(succ)
exe8(swap)
exe8(swapd)
exe8(swons)
exe8(system)
exe8(tailrec)
exe8(take)
exe8(tan)
exe8(tanh)
exe8(ternary)
exe8(time)
exe8(times)
exe8(treegenrec)
exe8(treerec)
exe8(treestep)
exe8(true)
exe8(trunc)
exe8(typeof)
exe8(unary)
exe8(unary2)
exe8(unary3)
exe8(unary4)
exe8(uncons)
exe8(unstack)
exe8(unswons)
exe8(user)
exe8(while)
exe8(x)
exe8(xor)
